# quicsand-c

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  KollapsAppBuilder  Makefile  MergeMetrics.py  MetricsAnalysis.py  MsquicMetricsAnalysis.py  README.md  TopologyGenerator.py  aa_low_lat_mid_bw_1_1.xml  ab_high_lat_mid_bw_1_1.xml  ac_mid_lat_low_bw_1_1.xml  ad_mid_lat_high_bw_1_1.xml  af_high_lat_low_bw_1_1.xml  ag_low_lat_high_bw_1_1.xml  bad_latency.xml  docker-compose.yml  experiment.yaml  good_latency.xml  high_latency_1_1.xml  low_bandwidth_1_1.xml  low_latency.xml  multiple_clients.xml  net_metrics.sh  quicsand-cli  quicsand.yaml  rr_metrics.py  run  run_kollaps  run_local  tests.yaml  tests_local.yaml  topologies.yaml  topology.xml  topology.yaml
dockerfiles/: Dockerfile.msquic  Dockerfile.quiche  Dockerfile.quicsand  Dockerfile.run  Dockerfile.topology_generator  Dockerfile.yq
keys/: tests_keys.txt  topologies_keys.txt
quicsand/: Makefile  README.md  config.yaml  keystore.jks  server.cer  server.cert  server.key  tut.c
quicsand/certs/: key.pem  keystore.jks  quicsand-server.cer  quicsand-server.pem  servercert.pem  serverkey.pem
quicsand/include/: log.h  quicsand_api.h  quicsand_client_adapter.h  quicsand_server_adapter.h  utils.h
quicsand/src/: entrypoint.sh  log.c  quicsand_api.c  utils.c
quicsand/src/client/: Dockerfile  Makefile  build.sh  entrypoint.sh  quicsand_client.c  quicsand_client_download.c  quicsand_client_ms.c  quicsand_client_rr.c  quicsand_client_streaming.c  quicsand_client_upload.c
quicsand/src/client_lsquic/: lsquic_build.sh  lsquic_client_adapter.c
quicsand/src/client_msquic/: msquic_build.sh  msquic_client_adapter.c
quicsand/src/client_quiche/: quiche_client_adapter.c
quicsand/src/client_tcp/: quicsand_client.c
quicsand/src/server/: Dockerfile  Makefile  build.sh  entrypoint.sh  quicsand_server.c  quicsand_server_download.c  quicsand_server_ms.c  quicsand_server_rr.c  quicsand_server_streaming.c  quicsand_server_upload.c
quicsand/src/server_lsquic/: lsquic_server_adapter.c
quicsand/src/server_msquic/: msquic_server_adapter.c
quicsand/src/server_quiche/: quiche_server_adapter.c
quicsand/src/server_tcp/: quicsand_server.c
resources/testing_files/: file.txt
resources/topologies/: high_bandwidth.xml  high_latency.xml  low_bandwidth.xml
